# cardano-trace

./: .coverage  .gitattributes  .gitignore  README.md  pyproject.toml  pytest.ini  trace_888b6cb21c85_0.html
.omc/state/: agent-replay-5b939d1c-4958-4aed-a880-b0ce54e92967.jsonl  last-tool-error.json  subagent-tracking.json
.omo/evidence/: task-10-error-outref.txt  task-12-coverage.txt  task-12-edge-cases.txt  task-12-full-suite.txt  task-3-depth-test.txt  task-4-cache-reuse.txt  task-5-empty-result.txt  task-6-no-cache.txt  task-7-real-time.txt  task-8-skip-tx.txt  task-9-cached-outputs.txt
.omo/plans/: trace-utxo-deep-review.md
.sisyphus/run-continuation/: ses_1d638f9f5ffeD7u7mei2EFxnM5.json
.utxo-cache/: addr_index.json  cache.db  index.json  store.json
.utxo-cache/manifests/: 07dc3acda5a30e08.json  8ffb813f71e0d04b.json  addr_6c23d5d3d23ad6d7.json  addr_caba2f78b6ec87a7.json  cbfcfa4d614a9804.json  d9bc4d83038ae718.json
.utxo-cache/traces/: 0305d5c19e8b6344.json  07dc3acda5a30e08.json  1c01065d26182a1f.json  6c23d5d3d23ad6d7_10.json  6c23d5d3d23ad6d7_11.json  8ffb813f71e0d04b.json  acc5004ccb34c059.json  caba2f78b6ec87a7_10.json  caba2f78b6ec87a7_100.json  caba2f78b6ec87a7_101.json  caba2f78b6ec87a7_11.json  caba2f78b6ec87a7_20.json  cbfcfa4d614a9804.json  d9bc4d83038ae718.json
lib/bindings/: utils.js
scripts/: setup_utxorpc_ns.py
tests/: conftest.py  test_address_interactions.py  test_backward.py  test_cache.py  test_cex_filter.py  test_cli_surface.py  test_direction_and_cex_user.py  test_edge_cases.py  test_forward.py  test_regression.py
(+49 files in other folders)
