[project]
name = "utxo-tracer"
version = "1.0.0"
description = "Cardano UTXO chain tracer with Dash Cytoscape visualization"
requires-python = ">=3.11"
authors = [{ name = "Tracking UTXO" }]
readme = "README.md"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13",
    "pandas>=2",
    "grpcio>=1.60",
    "dash>=2.14",
    "dash-cytoscape>=1.0",
    "python-dotenv>=1",
    "utxorpc @ git+https://github.com/utxorpc/python-sdk.git",
]

[project.scripts]
utxo-tracer = "utxo_tracer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utxo_tracer"]

[tool.hatch.metadata]
allow-direct-references = true
